fix: move cursor mod to utility class and improve nowrap class name

--- a/src/styles/elements/input.scss
+++ b/src/styles/elements/input.scss
@@ -46,10 +46,6 @@
       display: none;
     }
   }
-
-  &.-pointer{
-    cursor: pointer;
-  }
 }
 
 ///
